test/fail/var-assert-pattern.grace
var name : type { no } := object {}
